# sd-online-chess-backend-mvp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
docs/: mvp-scope.md  system-design.md
src/chess_mvp/: auth.py  config.py  database.py  main.py
src/chess_mvp/models/: __init__.py  game.py  matchmaking_queue.py  move.py  player.py
src/chess_mvp/routers/: games.py  health.py  matchmaking.py  players.py
src/chess_mvp/schemas/: game.py  matchmaking.py  player.py
src/chess_mvp/services/: chess_service.py  game_service.py  matchmaking_service.py  player_service.py
src/chess_mvp/ws/: game_handler.py  game_manager.py
tests/: conftest.py  test_skeleton.py
verify/: manifest.env
verify/acceptance/: test_fr1_register.py  test_fr2_matchmaking.py  test_fr3_connect.py  test_fr4_checkmate.py  test_fr4_move.py  test_fr4_stalemate.py  test_fr5_resign.py  test_fr6_get_game.py  test_fr7_list_games.py  test_fr8_healthz.py
