[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-mvp"
version = "0.1.0"
description = "Real-time multiplayer chess server — MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "python-chess>=1.999,<2",
    "alembic>=1.13,<2",
    "pydantic-settings>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "websockets>=12,<14",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chess_mvp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "verify"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
